# rust-http-server

./: Cargo.toml  LICENSE  README.md  README_zh.md
.github/workflows/: release.yml
src/: args.rs  dir_listing.rs  error_page.rs  file_server.rs  logging.rs  main.rs  path_sanitize.rs  startup.rs  state.rs
