[package]
name = "http-server"
version = "1.0.0"
edition = "2024"
authors = ["Roy-Jin"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "cors", "trace"] }
tower = "0.5"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
path-slash = "0.1"
percent-encoding = "2"
get_if_addrs = "0.5"
colored = "2"
chrono = "0.4"

