[package]
name = "http-server"
version = "1.1.1"
edition = "2024"
authors = ["Roy-Jin"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "macros"] }
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "cors", "trace"] }
tower = "0.5"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
path-slash = "0.1"
percent-encoding = "2"
get_if_addrs = "0.5"
colored = "2"
chrono = "0.4"
open = "5"

